--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -8,12 +8,22 @@
   <link rel="stylesheet" th:href="@{http://fonts.googleapis.com/css?family=Exo:900}"
         href="http://fonts.googleapis.com/css?family=Exo:900"/>
   <link rel="stylesheet" th:href="@{/css/main.css}" href="../static/css/main.css">
+  <style>
+    /* カスタムのスタイルを追加 */
+    .error {
+      color: red;
+      position: absolute; 
+      
+      margin-left: 0px; /* 調整が必要な場合は適宜変更してください */
+      
+    }
+  </style>
 </head>
 
 <body>
 <nav th:insert="header.html :: header"></nav>
 <div class="container">
-  <form th:action="@{/submit}" th:object="${userOrderForm}" class="form-horizontal" method="post">
+  <form th:action="@{/submit}" th:object="${userOrderForm}" class="form-horizontal" method="post" onsubmit="return validationFOrm()">
     <div class="progress-icon">
       <img src="../img/progress_input.svg" />
     </div>
@@ -29,10 +39,12 @@
         <div class="form-group">
           <label for="customerName">氏名</label>
           <input type="text" id="customerName" name="customerName" th:field="*{customerName}" class="form-control" value="山田太郎"/>
+         <p id="error-message-customer" class="error" style="display: none;">※氏名を入力してください</p>
         </div>
         <div class="form-group">
           <label for="tel">連絡先TEL ※半角で入力してください</label>
           <input placeholder="例：08011223344" type="tel" id="tel" name="tel" th:field="*{tel}" class="form-control" value="03-1234-5678"/>
+          <p id="error-message-tel" class="error" style="display: none;">※電話番号を入力してください</p>
         </div>
         <div class="form-group">
           <label for="email">連絡先メールアドレス</label>
@@ -92,7 +104,7 @@
       <div class="form-group">
         <div class="text-center">
           <button type="submit" name="backToTop" class="btn-back">TOPへ戻る</button>
-          <button type="submit" name="confirm" class="btn btn-primary">ご入力内容の確認へ</button>
+          <button type="submit" name="confirm" class="btn btn-primary"onclick="checkAndMove()">ご入力内容の確認へ</button>
         </div>
       </div>
     </div>
@@ -101,7 +113,47 @@
 <script src="../js/jquery-3.5.1.min.js" th:src="@{/js/jquery-3.5.1.min.js}"></script>
 <script src="../js/popper.min.js" th:src="@{/js/popper.min.js}"></script>
 <script src="../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+<script>
+  function validationFOrm() {
+    // 入力値の取得
+    var text1Element = document.getElementById("customerName");
+    var text1Value = text1Element.value;
 
+    var text2Element = document.getElementById("tel");
+    var text2Value = text2Element.value;
+
+    flag = 0;
+
+    // 入力が空欄の場合はアラートを表示
+    if (text1Value === '') {
+      document.getElementById("error-message-customer").style.display = "block";
+      text1Element.classList.add("error-input");
+      
+      flag = 1;
+    } else{
+      // 次のページに移動する処理をここに追加（例えば、window.location.href = '次のページのURL';）
+      document.getElementById("error-message-customer").style.display = "none";
+      text1Element.classList.remove("error-input");
+
+    }
+    if (text2Value === '') {
+      document.getElementById("error-message-tel").style.display = "block";
+      text2Element.classList.add("error-input");
+      
+      flag = 1;
+    } else{
+      // 次のページに移動する処理をここに追加（例えば、window.location.href = '次のページのURL';）
+      document.getElementById("error-message-tel").style.display = "none";
+      text2Element.classList.remove("error-input");
+
+    }
+    if(flag==1){
+      alert('入力内容に誤りがあります。お手数ですが、確認をお願いします。');
+      return false;
+    }
+    return true;
+  }
+</script>
 </body>
 
 </html>
