--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -21,7 +21,8 @@
     <div class="col-sm-12">
       <div class="text-center">
         <div class="primary-text"><span th:text="${price}"></span>円</div>
-        <button type="submit" name="complete" class="btn btn-primary">詳細見積もり依頼へ</button>
+        <td><button type="submit" name="backToConfirm" class="btn-back">前画面へ戻る</button></td>
+        <td><button type="submit" name="complete" class="btn btn-primary">詳細見積もり依頼へ</button></td>
       </div>
       <div class="sub-title">お客様情報</div>
         <table class="table table-bordered">
@@ -108,11 +109,7 @@
         </tr>
         </tbody>
       </table>
-      <div class="form-group">
-        <div class="text-center">
-          <button type="submit" name="backToConfirm" class="btn-back">TOPへ戻る</button>
-        </div>
-      </div>
+      
     </div>
   </form>
 </div>
