--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -22,8 +22,22 @@
       <div class="text-center">
         <div class="primary-text"><span th:text="${price}"></span>円</div>
         <td><button type="submit" name="backToConfirm" class="btn-back">前画面へ戻る</button></td>
-        <td><button type="submit" name="complete" class="btn btn-primary">詳細見積もり依頼へ</button></td>
+        <td><button onclick="confirmFunction1()" type="submit" name="complete" class="btn btn-primary">詳細見積もり依頼へ</button></td>
       </div>
+      <script>
+        function confirmFunction1() {
+        var txt;
+        //確認ダイアログの表示
+        var rt = confirm("依頼を確定してよろしいでしょうか？");
+        if (rt == true) {
+        txt = "「OK」を選択しました。";
+        } else {
+        txt = "「キャンセル」を選択しました。";
+        }
+        //ブラウザーに表示するテキストを代入する
+        document.getElementById("conf1").innerHTML = txt;
+        }
+        </script>
       <div class="sub-title">お客様情報</div>
         <table class="table table-bordered">
         <col span="1" style="background-color: #FFFFFF;">
